:package: Package Information v0.1.0

--- a/package.json
+++ b/package.json
@@ -64,16 +64,19 @@
     "cross-platform",
     "css",
     "desktop-app",
-    "electron",
     "electron-builder",
     "electron-serve",
+    "electron",
     "framework",
+    "gatsby-cli",
+    "gatsby-starter",
     "gatsby",
+    "gatsbyjs",
     "graphql",
     "html",
     "installed-app",
-    "javascript",
     "javascript-framework",
+    "javascript",
     "linux",
     "macos",
     "native-app",
