:octocat: :no_entry: List of untracked files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,15 @@ typings/
 # dotenv environment variable files
 .env*
 
-# gatsby files
+# Gatsby files
 .cache/
 public
+
+# Gatsby Distribution
+build
+
+# Electron Distribution
+dist
 
 # Desktop Services Store on macOS
 .DS_Store
