:package: Package Information v0.1.0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "author": "Souleh Shaikh <author.souleh@thegeekytutor.com>",
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple starter project to get up and developing quickly with the blend of Gatsby and Electron JS for building a Native Desktop App on various OS Platforms like Windows, Linux and macOS using Electron Builder.",
   "main": "main.js",
   "build": {
     "icon": "src/images/gatsby-icon.png",
