--- a/package.json
+++ b/package.json
@@ -38,23 +38,23 @@
     "electron-serve": "^1.0.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "electron": "^8.3.0",
-    "electron-builder": "^22.5.1",
-    "gatsby": "^2.20.25",
-    "gatsby-image": "^2.3.4",
-    "gatsby-plugin-manifest": "^2.3.5",
-    "gatsby-plugin-offline": "^3.1.4",
-    "gatsby-plugin-react-helmet": "^3.2.4",
-    "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-source-filesystem": "^2.2.4",
-    "gatsby-transformer-sharp": "^2.4.6",
-    "prettier": "2.0.4",
+    "concurrently": "^5.2.0",
+    "electron": "^9.0.0",
+    "electron-builder": "^22.6.1",
+    "gatsby": "^2.22.11",
+    "gatsby-image": "^2.4.5",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.5.3",
+    "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "wait-on": "^4.0.2"
+    "wait-on": "^5.0.0"
   },
   "keywords": [
     "application",
