:package: Package Information v0.1.0

--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     ]
   },
   "scripts": {
-    "start": "gatsby develop",
+    "develop": "gatsby develop",
     "serve": "gatsby serve",
     "prebuild": "yarn run clean",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "electron": "wait-on http://localhost:8000 && electron .",
-    "electron-dev": "concurrently \"yarn run start\" \"yarn run electron\"",
+    "electron-dev": "concurrently \"yarn run develop\" \"yarn run electron\"",
     "preelectron-pack": "yarn run build",
     "electron-pack": "electron-builder"
   },
@@ -38,54 +38,44 @@
     "electron-serve": "^1.0.0"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "electron": "^9.0.0",
-    "electron-builder": "^22.6.1",
-    "gatsby": "^2.22.11",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-manifest": "^2.4.9",
-    "gatsby-plugin-offline": "^3.2.7",
-    "gatsby-plugin-react-helmet": "^3.3.2",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.5.3",
-    "prettier": "^2.0.5",
+    "concurrently": "^5.3.0",
+    "electron-builder": "^22.8.0",
+    "electron": "^9.2.0",
+    "gatsby-image": "^2.4.15",
+    "gatsby-plugin-manifest": "^2.4.22",
+    "gatsby-plugin-offline": "^3.2.23",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.26",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby": "^2.24.41",
+    "prettier": "2.0.5",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "wait-on": "^5.0.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "react": "^16.12.0",
+    "wait-on": "^5.2.0"
   },
   "keywords": [
-    "application",
-    "blog",
-    "concurrently",
     "cross-platform",
-    "css",
-    "desktop-app",
-    "electron-builder",
-    "electron-serve",
-    "electron",
-    "framework",
-    "gatsby-cli",
-    "gatsby-starter",
-    "gatsby",
-    "gatsbyjs",
-    "graphql",
-    "html",
+    "native-app",
     "installed-app",
-    "javascript-framework",
-    "javascript",
+    "desktop-applications",
+    "windows",
     "linux",
     "macos",
-    "native-app",
-    "npm",
-    "react",
-    "responsive-app",
-    "static-site-generator",
+    "html",
+    "css",
+    "javascript",
+    "front-end",
+    "blog",
+    "gatsby",
+    "electron",
+    "electron-builder",
+    "electron-serve",
+    "concurrently",
     "wait-on",
-    "web-framework",
-    "windows",
-    "yarn"
+    "react",
+    "static-site-generator"
   ]
 }
