:package: Package Information v0.1.0

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "files": [
       "public/**/*",
       "main.js"
-    ]
+    ],
+    "win": {},
+    "linux": {},
+    "mac": {}
   },
   "scripts": {
     "build": "gatsby build",
